Completed Rotating Nav
Completed Rotating Nav

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rotating Navigation</title>
     <!-- Site Stylesheet-->
     <link rel="stylesheet" href="css/site.css">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/df1b35514e.js" crossorigin="anonymous"></script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +20,35 @@
 </head>
 
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <div class="circle-container">
+            <div class="circle">
+                <button id="close">
+                    <i class="fas fa-times"></i>
+                </button>
+                <button id="open">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="content">
+            <h1>Article</h1>
+            <small>TJ Longshore</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi alias harum eligendi inventore id odit! Temporibus omnis dolores officiis, voluptas sapiente porro. Sapiente consectetur earum a laudantium sed cumque id, quia voluptatum et perspiciatis aspernatur nihil repellendus dignissimos quisquam delectus beatae consequatur consequuntur corrupti ab quae debitis, harum veniam? Assumenda modi exercitationem atque dolore esse quis obcaecati incidunt sit maxime! Veritatis necessitatibus magni, placeat harum libero eos veniam. Vero quo maxime quam dolorum tenetur? Blanditiis, aliquid error iste numquam illum odio odit id, repellat aperiam deserunt accusantium pariatur laborum eos omnis. Veniam corrupti repudiandae culpa quam a architecto magni sapiente?</p>
+
+            <h3>My Favorite Place</h3>
+            <img src="https://images.unsplash.com/photo-1626699686569-2cb9012533bd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTN8fGFzaGV2aWxsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="Cloudy Mountain Range" />
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit rerum quam eveniet fugiat repellat aperiam rem qui dolorum velit ipsa atque, beatae ipsum dolore alias veritatis tenetur nobis ducimus, facilis delectus dolorem, commodi ad. Officia blanditiis odio sit nobis animi porro asperiores aliquam adipisci et suscipit inventore, excepturi nulla nemo iste voluptas temporibus placeat fugiat eaque earum vero ex ea necessitatibus consequatur. Esse molestiae, quisquam perspiciatis, et facilis quos ut, illum velit omnis veritatis magnam.</p>
+        </div>
+    </div>
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i>Home</li>
+            <li><i class="fas fa-user-alt"></i>About</li>
+            <li><i class="fas fa-envelope"></i>Contact</li>
+        </ul>
+    </nav>
     <script src="js/site.js"></script>
 </body>
 
